@@ -19,7 +19,7 @@
 	    
 	    <h4>What is OpenFlights?</h4>
 	    
-	    <p>In a nutshell, it's a tool that lets you map your flights around the world, search and filter them in all sorts of interesting ways, calculate statistics automatically, and share the resulting maps with friends and the world &mdash; if you want to.</p>
+	    <p>In a nutshell, it's a tool that lets you <b>map</b> your flights around the world, <b>search and filter</b> them in all sorts of interesting ways, calculate <b>statistics</b> automatically, and <b>share</b> the resulting maps with friends and the world &mdash; if you want to.</p>
 
 	    <h4>What can I do with OpenFlights?</h4>
 
@@ -38,6 +38,7 @@
 	      <li>OpenFlights has a <b>dynamic map</b>.  You can pan, zoom, select, scroll and explore all you like!</li>
 	      <li>OpenFlights is <b>user-friendly and efficient</b>.  Everything's on the same page!</li>
 	      <li>OpenFlights <b>makes searching really easy</b>.  Point and click!</li>
+	      <li>OpenFlights has a <b>powerful filter</b>.  Three clicks, and your map will show only Singapore Airlines flights in business class in 2007.</li>
 	      <li>OpenFlights <b>works in realtime</b>.  Make any change, and you'll see it right then and there.</li>
 	      <li>OpenFlights supports <b>"trips"</b> (<a href="/help/trip.html">read more</a>).  You can join up any flights together into a trip, which you can then display on its own page and even share with friends.</li>
 	      <li>OpenFlights is <b>free in spirit</b>.  We don't try to lock you in: it's easy to import your data <i>and</i> export copies for safekeeping.</li>
@@ -86,8 +87,8 @@
 	    <p>Roughly like this:</p>
 	    <ol>
 	      <li><s>Implement importing and exporting.</s> (Done!)</li>
-	      <li><s>Implement complex flight input (multi-segment and repeated flights).</s> (Done!) </li>
-	      <li>Add support for filtering according to pretty much anything.</li>
+	      <li><s>Implement complex flight input (multi-segment and repeated flights).</s> (Done!)</li>
+	      <li><s>Add support for filtering according to pretty much anything.</s> (Done!)</li>
 	      <li>Graphical bells and whistles (eg. color-coding of flights).</li>
 	      <li><b>Full public launch.</b></li>
 	    </ol>
