@@ -1,5 +1,6 @@
 <b>2008-12-15</b>
 
+* Megafilter (class, distance, note, reason, reg) added
 * "Not in trip" filter option added
 * Filter handling rationalized into php/filter.php:getFilterString()
 * Completed elite level handling framework
